# irox-unsafe

./: Cargo.toml  README.md  about.toml  deny.toml  justfile  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: new_module.md
.github/workflows/: dev-img.disabled  rust.yml
dev/: Dockerfile  prep-environment.sh
dev/mod_template/: Cargo.toml
irox-unsafe/: CHANGELOG.md  Cargo.toml
irox-unsafe/src/: lib.rs
libraries/arch-x86_64/: CHANGELOG.md  Cargo.toml
libraries/arch-x86_64/.cargo/: config.toml
libraries/arch-x86_64/benches/: random.rs
libraries/arch-x86_64/src/: cpu.rs  lib.rs  rand.rs
libraries/safe-linux/: CHANGELOG.md  Cargo.toml  README.md
libraries/safe-linux/doc/syscall_tables/: update.sh
libraries/safe-linux/src/: aio.rs  errno.rs  lib.rs  sys.rs  syscall.rs  time.rs
libraries/safe-windows/: CHANGELOG.md  Cargo.toml  README.md
libraries/safe-windows/examples/: aio.rs  console.rs  prompt.rs  read.rs  smbios.rs
libraries/safe-windows/src/: credentials.rs  error.rs  fs.rs  lib.rs  net.rs  net_if.rs  priority.rs  registry.rs  smbios.rs  system.rs  term.rs
libraries/simd/: Cargo.toml
libraries/simd/benches/: hashes.rs
libraries/simd/examples/: b2sum.rs
libraries/simd/src/: blake2.rs  lib.rs  murmur3.rs
libraries/simd/tests/: blake2tests.rs
