[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sean P. Madden <sean@seanmadden.net>"]
homepage = "https://github.com/spmadden/irox-unsafe"
license = "MIT OR Apache-2.0"
exclude = ["doc"]
readme = "README.md"
repository = "https://github.com/spmadden/irox-unsafe"

[workspace]
resolver = "2"
members = [
    "irox-unsafe",
]

[workspace.dependencies]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "allow"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
redundant_explicit_links = "deny"

[workspace.lints.clippy]
cargo_common_metadata = "deny"
case_sensitive_file_extension_comparisons = "deny"
create_dir = "deny"
dbg_macro = "deny"
doc_link_with_quotes = "deny"
empty_enum = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
exit = "deny"
expect_used = "deny"
expl_impl_clone_on_copy = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
format_push_string = "deny"
from_iter_instead_of_collect = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
ignored_unit_patterns = "deny"
impl_trait_in_params = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
inefficient_to_string = "deny"
iter_not_returning_iterator = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
linkedlist = "deny"
lossy_float_literal = "deny"
manual_assert = "deny"
manual_instant_elapsed = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
match_on_vec_items = "deny"
match_same_arms = "deny"
match_wild_err_arm = "deny"
mem_forget = "deny"
mismatching_type_param_order = "deny"
missing_assert_message = "deny"
missing_enforced_import_renames = "deny"
missing_panics_doc = "deny"
mixed_read_write_in_expression = "deny"
mut_mut = "deny"
mutex_atomic = "deny"
needless_for_each = "deny"
needless_pass_by_value = "deny"
no_mangle_with_rust_abi = "deny"
non_ascii_literal = "deny"
option_option = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
redundant_feature_names = "deny"
ref_option_ref = "deny"
return_self_not_must_use = "deny"
same_functions_in_if_condition = "deny"
semicolon_if_nothing_returned = "deny"
tests_outside_test_module = "deny"
trivially_copy_pass_by_ref = "deny"
unchecked_duration_subtraction = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_join = "deny"
unnecessary_wraps = "deny"
unreachable = "deny"
unused_async = "deny"
unused_self = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"
wildcard_dependencies = "deny"
zero_sized_map_values = "deny"
missing_errors_doc = "allow"
module-name-repetitions = "allow"
semicolon-if-nothing-returned = "allow"
