[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sean P. Madden <sean@seanmadden.net>"]
homepage = "https://github.com/spmadden/irox-unsafe"
license = "MIT OR Apache-2.0"
exclude = ["doc"]
readme = "README.md"
repository = "https://github.com/spmadden/irox-unsafe"

[workspace]
resolver = "2"
members = [
    "irox-unsafe",
    "libraries/arch-x86_64",
    "libraries/safe-linux",
    "libraries/safe-windows",
]

[workspace.dependencies]
windows = {version = "0.57", default-features = false, features = ["std"]}
criterion = "0.5"
core_affinity = "0.8.3"

# Lints last updated for Rust 1.74.0
[workspace.lints.rust]

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "allow"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"
redundant_explicit_links = "warn"

[workspace.lints.clippy]
cargo_common_metadata = "warn"
case_sensitive_file_extension_comparisons = "warn"
create_dir = "warn"
dbg_macro = "warn"
doc_link_with_quotes = "warn"
empty_enum = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "warn"
exit = "warn"
expect_used = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
fn_params_excessive_bools = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
impl_trait_in_params = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
iter_not_returning_iterator = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_assert_message = "allow"
missing_enforced_import_renames = "warn"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
mixed_read_write_in_expression = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
no_mangle_with_rust_abi = "warn"
non_ascii_literal = "warn"
option_option = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
tests_outside_test_module = "warn"
trivially_copy_pass_by_ref = "warn"
unchecked_duration_subtraction = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_wraps = "warn"
unreachable = "warn"
unused_async = "warn"
unused_self = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
zero_sized_map_values = "warn"
missing_errors_doc = "allow"
module-name-repetitions = "allow"
semicolon-if-nothing-returned = "allow"
