[package]
name = "irox-unsafe"
description = "irox (unsafe) Rust Tools & Libraries"
keywords = ["irox", "irox-unsafe"]
categories = ["aerospace", "science", "mathematics"]
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
safe-windows = ['dep:irox-safe-windows']

[dependencies]
irox-safe-windows = {version = "^0.1.0", path = "../libraries/safe-windows", optional = true}
