[package]
name = "irox-arch-x86-64"
description = "Intel x86-64 Architecture-specific bits & bobs"
keywords = ["irox", "irox-unsafe"]
categories = ["hardware-support"]
version= "0.1.1"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
criterion.workspace = true

[lib]
bench = false

[[bench]]
name = "random"
harness = false
