[package]
name = "irox-safe-linux"
description = "Pure-Rust implementations of the linux native API functions & SYSCALLs to make them ergonomic."
keywords = ["irox", "irox-unsafe", "no-std", "linux", "syscall"]
categories = ["api-bindings", "os::linux-apis", "no-std"]
version= "0.1.1"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
irox-enums = "^0"
