[package]
name = "irox-safe-windows"
description = "Wrappers around the windows native unsafe functions to make them ergonomic"
keywords = ["irox", "irox-safe"]
categories = ["api-bindings", "os::windows-apis"]
version= "0.1.1"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = []
async = ["dep:futures-lite"]

[dependencies]
futures-lite = {version = "2.3", optional = true, features = ["futures-io"]}
irox-bits = {version = "0", features = ["std"]}

[target.'cfg(windows)'.dependencies]
windows = {workspace = true, features = ["Win32_Foundation", "Win32_Security_Credentials", "Win32_Graphics_Gdi", "Win32_System_SystemInformation", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Threading"] }
irox-structs = "0.5"
irox-tools = { version = "0", features = ["std"] }
irox-log = "0"

[dev-dependencies]
tokio = {version = "1.37", features = ["full"]}
irox-threading = "0.2.4"
