[package]
name = "irox-safe-windows"
description = "Wrappers around the windows native unsafe functions to make them ergonomic"
keywords = ["irox", "irox-safe"]
categories = ["api-bindings", "os::windows-apis"]
version= "0.1.2"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = []
async = ["dep:futures-lite"]

[dependencies]
futures-lite = {version = "2.3", optional = true, features = ["futures-io"]}
irox-structs = "0"

[dependencies.irox]
version = "0"
features = ["structs", "bits", "tools", "log", "enums", "std", "time", "units"]

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
]

[dev-dependencies]
tokio = {version = "1.37", features = ["full"]}
irox = {version = "0", features = ["threading"]}